--- a/estilos.css
+++ b/estilos.css
@@ -182,17 +182,86 @@ main{
     }
 .photo_size1{
         width: 100% ;
-    }  
+    } 
+    .section_sobre_nosotros{
+        padding: 30px;
+    }
+    .sn_titulo{
+        font-size: 50px;
+    } 
+    .sn_parrafo{
+        font-size: 12px;
+    }
 /* cups*/   
 .main_section_cups{
-    display: flex;
+    display: grid;
     grid-template-columns: 1fr ;
     grid-template-rows: auto auto auto;
+    grid-row-gap: 20px;
 }
 .section_cups{
     width: 100%;
 
+
 }
+.cups_t{
+    font-size: 50px;
+}
+.cups_d{
+    font-size: 12px;
+    width: 250px;
+    margin-top: 5px;
+
+}
+.cups_desc{
+    padding: 25px;
+
+}
+.cup_name{
+    font-size: 15px;
+    position: absolute;
+    padding-top: 20px;
+    padding-left: 25px;
+    
+}
+/* Series*/
+.section_series{
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 5 auto;
+}
+
+.serie_photo_size1{
+    width: 100%;
+}
+.h2_series{
+    width: 300px;
+    font-size: 50px;
+    padding: 30px;
+}
+/* Piezas*/
+.section_piezas{
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 9 auto;
+    grid-gap: 20px;
+}
+.pieza_foto_size{
+    width: 100%;
+}
+
+@media (max-width: 980px ){
+    /* Sobre Nosotros oculto mobile*/
+    .photo_size{
+        display: none;
+    }
+    /* Series oculto mobile*/
+    .serie_photo_size{
+    display: none;}
+}
+        
+      
+    
 
 /* tablet y desktop */
 @media (min-width: 768px ){
@@ -212,10 +281,8 @@ main{
         font-size: 14px;
         
     }
-}
+    
 
-@media (min-width: 1028px )
-{
     .urania{
         width: 180px;
     }
@@ -246,6 +313,9 @@ main{
    
     .img_dripper{
         width: 600px;
+        margin-right: 20px;
+        padding-top: 20px;
+        padding-bottom: 20px;
         
         transition: transform .2s;
     }
@@ -257,6 +327,9 @@ main{
     }
     .img_cup{
         width: 600px;
+        margin-left: 20px;
+        padding-top: 20px;
+        padding-bottom: 20px;
         
         transition: transform .2s;
    
@@ -396,8 +469,12 @@ main{
 
 }
 .section_cups{
-    width: 70%;
+    width: 400px;
+    transition: transform .2s;
 }
+.section_cups:hover{
+    transform: scale(1.1);
+    }
 .cups_t{
     font-size: 50px;
     padding-top: 100px;
@@ -412,7 +489,86 @@ main{
 }
 .cup_name{
     position: absolute;
+    padding-top: 190px;
+    padding-left: 15px;
+    background-color: rgba(207, 205, 205, 0.562);
+    font-size: 18px;
+    color: black;
+
+}
+.cup_name:hover{
+    color: rgb(15, 15, 129);
+
+}
+/* Series*/
+.section_series{
+    display: grid;
+    grid-template-columns: 3 fr;
+    grid-template-rows: 5 auto;
+    grid-row-gap: 30px;
+    grid-column-gap: 50px;
+    margin-left: 20px;
+}
+.serie_photo_size{
+    width: 400px;
+    transition: transform .2s;
+}
+.serie_photo_size:hover{
+    transform: scale(1.1);
+}
+.serie_photo_size1{
+    width: 400px;
+    transition: transform .2s;
+}
+.serie_photo_size1:hover{
+    transform: scale(1.1);
+}
+.h2_series{
+    width: 280px;
+    font-size: 48px;
+    padding: 30px;
+    background-color: rgba(207, 205, 205, 0.562);
+    position: absolute;
+}
+/* Piezas*/
+.section_piezas{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr ;
+    grid-gap: 20px;
+    
+   
+}
+.h2_piezas_n{
+    font-size: 50px;
+    width: 380px;
+    height: 100px;
+    padding: 20px;
+    margin-bottom: 40px;
+}
+.piezas_t{
+    font-size: 20px;
+}
+.piezas_p{
+    font-size: 12px;
+    margin-top: 5px;
+}
+.piezas_desc{
+    position: absolute;
+    background-color: rgba(207, 205, 205, 0.562);
+    padding-top: 80px;
+    padding-left: 20px;
+    padding-bottom: 40px;
+    width: 280px;
+}
+.piezas_descr{
+    position: relative;
     padding-top: 30px;
+    background-color: rgba(207, 205, 205, 0.562);
+    width: 280px;
 }
 }
+
+
+
 
