cuatro archivo de mi proyecto

--- a/estilos.css
+++ b/estilos.css
@@ -22,6 +22,7 @@
  
  
  
+ 
 }
 
 /* mobile_first*/
@@ -35,6 +36,7 @@
     top: 20px;
     z-index: 100;
     background-color: rgba(255, 255, 251, 0.377);
+    height: 200px;
     
     
     
@@ -46,6 +48,7 @@ nav{
     grid-template-rows: auto auto;
     justify-content: center;
     align-items: center;
+   
    
 }
 .logo{
@@ -60,11 +63,16 @@ nav{
 
 ul li a {
     font-size: 10px;
-    color: black
+    color: black;
+    text-decoration: none;
+    padding-left: 8px;
+    padding-right: 8px;
     
 }
+
 li :hover{
     color: rgb(15, 15, 129);
+    
     
 }
 main{
@@ -192,6 +200,7 @@ main{
     .sn_parrafo{
         font-size: 12px;
     }
+
 /* cups*/   
 .main_section_cups{
     display: grid;
@@ -265,18 +274,15 @@ main{
 
 /* tablet y desktop */
 @media (min-width: 768px ){
-    .nav{
+    
+    nav{
         grid-template-columns: auto auto;
 
         justify-content: space-around;
         
       
     }
-    .main_menu{
-        display: flex;
-        justify-content: space-between;
-            
-    }
+ 
     ul li a {
         font-size: 14px;
         
@@ -458,6 +464,12 @@ main{
     .sn_parrafo{
         font-size: 14px;
         margin-top: 10px;
+    }
+    .video{
+        width: 300px;
+       
+        
+
     }
     /* cups*/   
 .main_section_cups{
