archivos con bootstrap

--- a/estilos.css
+++ b/estilos.css
@@ -3,10 +3,9 @@
     padding: 0;
     font-family: 'IBM Plex Serif', serif;
 }
+/* mobile_first*/
 
-.urania{
-    width: 150px;
-}
+
 .main_menu{
     margin-bottom: 0;
     padding: 0;
@@ -14,68 +13,18 @@
    
     
 }
-.main_menu li {
- list-style: none;
- font-size: 1rem;
- margin-left: 0.2rem;
- color: rgb(15, 15, 129);
- 
- 
- 
- 
-}
-
-/* mobile_first*/
-
-#header{
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: auto auto;
-    row-gap: 10px;
+header{
+    
     position: sticky;
     top: 20px;
     z-index: 100;
     background-color: rgba(255, 255, 251, 0.377);
-    height: 200px;
-    
-    
+    height: 80px;
     
 
 }
-nav{
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: auto auto;
-    justify-content: center;
-    align-items: center;
-   
-   
-}
-.logo{
-    justify-self: center;
-}
-.menu{
-    justify-self: center;
-   
-   
-}
 
-
-ul li a {
-    font-size: 10px;
-    color: black;
-    text-decoration: none;
-    padding-left: 8px;
-    padding-right: 8px;
-    
-}
-
-li :hover{
-    color: rgb(15, 15, 129);
-    
-    
-}
-main{
+.main{
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: auto auto;
@@ -87,6 +36,7 @@ main{
     border-top: 2px rgb(146, 141, 141) solid;
     margin-top: 10px;
     border-bottom: 2px rgb(146, 141, 141) solid;
+    
 }
 .piezas_h1{
     font-size: 40px;
@@ -99,8 +49,8 @@ main{
 }
 .div_novedades{
  position: absolute;
- margin-top: 140px;
- margin-left: 60px;
+ margin-top: 150px;
+ margin-left: 40px;
 }
 
 .novedades_1{
@@ -112,25 +62,18 @@ main{
     font-size: 12px;
     
 }
-.novedades_t{
-    position: absolute;
-    justify-content: center;
-    padding: 20px;
-    background-color: rgba(146, 141, 141, 0.493);
-    margin-top: 50px;
-    margin-left: -10px;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
-   
-}
+
 
 .img_dripper{
     width: 100%;
+    margin-top: -110px;
    
    
     
 }
 .img_cup{
     width: 100%;
+    margin-top: -110px;
    
 }
 .dripper_descripcion{
@@ -149,57 +92,42 @@ main{
     background-color: rgba(207, 205, 205, 0.562);
     
 }
-#footer
-{display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: auto auto;
-    row-gap: 10px;
-}
-    
-.footer_div{
-  height: 150px;
-  border-top: 2px rgb(146, 141, 141) solid;
-    
-}
-.footer_ul{
-    display: flex;
-    list-style: none;
-    font-size: 10px;
-    color: black;
-    padding-top: 50px;
-    justify-content: space-evenly;
-    
-}
-.footer_ul :hover{
-    color: rgb(15, 15, 129);
-    
-}
+
+
+
 
 .ig_logo{
     width: 30px;
 }
 /* sobre nosotros*/
-#grilla{
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: auto auto;
+.main_sobre_nosotros{
+    display: flex;
 }
 
-.photo_size{
-        width: 100%;
-    }
-.photo_size1{
-        width: 100% ;
-    } 
-    .section_sobre_nosotros{
-        padding: 30px;
-    }
-    .sn_titulo{
-        font-size: 50px;
-    } 
-    .sn_parrafo{
-        font-size: 12px;
-    }
+
+.section_sobre_nosotros{
+    width: 300px;
+    padding-top: 10px;
+    margin-left: 30px;
+    margin-top: 150px;
+    margin-bottom: 150px;
+    
+}
+.sn_titulo{
+    font-size: 50px;
+} 
+.sn_parrafo{
+    font-size: 12px;
+}
+.descripcion_sn{
+    width: 350px;
+    margin-top: 100px;
+    margin-bottom: 150px;
+    
+}
+.container{
+    padding: 30px;
+}
 
 /* cups*/   
 .main_section_cups{
@@ -252,57 +180,176 @@ main{
 .section_piezas{
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 9 auto;
+    grid-template-rows: 6 auto;
     grid-gap: 20px;
+    margin-top: 100px;
 }
 .pieza_foto_size{
     width: 100%;
 }
+.pieza_foto_size1{
+    width: 100%;
+}
+.h2_piezas_n{
+    font-size: 45px;
 
-@media (max-width: 980px ){
-    /* Sobre Nosotros oculto mobile*/
-    .photo_size{
-        display: none;
+   
+    
+}
+.container{
+   margin-top: 100px;
+}
+
+@media (max-width: 768px ){
+    .novedades_t{
+    display: none;
+       
     }
+    .novedades_t1{
+        display: none;
+           
+        }
+   
     /* Series oculto mobile*/
     .serie_photo_size{
     display: none;}
+
+    /* Piezas oculto mobile*/
+    .piezas_desc{
+        display: none;
+    }
+    .pieza_foto_size1{
+        display: none;
+    }
+   
 }
-        
-      
-    
-
-/* tablet y desktop */
-@media (min-width: 768px ){
-    
-    nav{
-        grid-template-columns: auto auto;
-
-        justify-content: space-around;
-        
-      
+@media (max-width: 767px ){
+       /* Sobre Nosotros oculto mobile*/
+ .container{
+    display: none;
+}
+   
     }
  
-    ul li a {
+        
+
+    
+
+/* tablet */
+@media (min-width: 768px  ){
+    /* Index tablet */
+    .novedades_1{
         font-size: 14px;
+        
+       
+    }
+    .novedades_2{    
+        font-size: 14px;    
+    }
+    .img_dripper{
+        width: 80%;
+        margin-top: -190px;
+        margin-left: 80px;    
+    }
+    .img_cup{
+        width: 80%;
+        margin-top: -150px;
+        margin-left: 80px;   
+    }
+    .dripper_descripcion{
+        position: relative;
+        top: 250px;
+        width: 100%;
+        padding: 10px;
+        background-color: rgba(207, 205, 205, 0.562);
+       
+    }
+    .cup_descripcion{
+        position: relative;
+        top: 250px;
+        width: 100%;
+        padding: 10px;
+        background-color: rgba(207, 205, 205, 0.562);
+        
+    }
+    #footer
+    {display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: auto auto;
+        row-gap: 10px;
+    }
+        
+    .footer_div{
+      height: 150px;
+      border-top: 2px rgb(146, 141, 141) solid;
+        
+    }
+    .footer_ul{
+        display: flex;
+        list-style: none;
+        font-size: 10px;
+        color: black;
+        padding-top: 50px;
+        justify-content: space-evenly;
+        
+    }
+    .footer_ul :hover{
+        color: rgb(15, 15, 129);
         
     }
     
+    .ig_logo{
+        width: 30px;
 
-    .urania{
-        width: 180px;
     }
-    .main_menu{
-        display: flex;
-        justify-content: space-between;
-        height: 70px;
-        margin-top: 55px;
-    }        
-    ul li a {
-        font-size: 16px;
-        justify-content: space-between;
-        
+
+    
+    /* Sobre Nosotros Tablet */
+    .main_sobre_nosotros{
+        margin-bottom: 100px;
+        margin-top: 100px;
     }
+    .section_sobre_nosotros{
+        width: 600px;
+    }
+
+  
+    
+     /* Cups Tablet */
+   .section_cups{
+    width: 80%;
+    margin-left: 80px;
+   }
+   .cup_name{
+    background-color: rgba(146, 141, 141, 0.493);
+    padding: 10px;
+    margin-left: 10px;
+    margin-top: 10px;
+
+   }
+   /* Series Tablet */
+   /* Piezas Tablet */
+   .pieza_foto_size{
+    width: 80%;
+    margin-left: 80px;
+   }
+   .pieza_foto_size1{
+    width: 80%;
+    margin-left: 80px;
+   }
+   .h2_piezas_n{
+    margin-left: 30px;
+    font-size: 50px;
+   }
+
+}
+
+/* desktop */
+@media (min-width: 1024px ){
+
+
+    
+    
     .piezas_h1{
         font-size: 45px;
         color: rgb(15, 15, 129);
@@ -315,6 +362,7 @@ main{
     .div_novedades{
         margin-top: 300px;
         margin-left: 700px;
+        position: absolute;
        }
    
     .img_dripper{
@@ -322,7 +370,7 @@ main{
         margin-right: 20px;
         padding-top: 20px;
         padding-bottom: 20px;
-        
+        margin-top: 20px;
         transition: transform .2s;
     }
     
@@ -331,12 +379,34 @@ main{
         
 
     }
+    .novedades_t{
+        position: absolute;
+        justify-content: center;
+        padding: 20px;
+        background-color: rgba(146, 141, 141, 0.493);
+        width: 100px;
+        margin-top: 50px;
+       margin-left: 70px;
+        box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+
+       
+    }
+    .novedades_t1{
+        position: absolute;
+        justify-content: center;
+        padding: 20px;
+        background-color: rgba(146, 141, 141, 0.493);
+        width: 100px;
+        margin-top: 50px;
+       margin-left: 10px;
+        box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+    }
     .img_cup{
         width: 600px;
         margin-left: 20px;
         padding-top: 20px;
         padding-bottom: 20px;
-        
+        margin-top: 20px;
         transition: transform .2s;
    
     }
@@ -394,89 +464,35 @@ main{
      
     }
     /* sobre nosotros*/
-#grilla_sn{
-    display: grid;
-    grid-template-areas: 
-    "cup space  descripcion"
-    "cup plato  descripcion"
-    "bowl bowl  descripcion";
-    grid-template-columns: 1fr 1fr 2fr;
-    grid-template-rows:  1fr 1fr 1fr;
-    grid-column-gap: 20px;
-    grid-row-gap: 10px;
-    margin-left: 40px;
-    
-    
- }
- 
-
- 
- section#space{
-     grid-area: space;
-     background-color: rgba(207, 205, 205, 0.562);
-     height: 200px;
- }
- section#descripcion{
-     grid-area: descripcion;
-     width: 400px;
-     margin-left: 20px;
-     
-     
-
- }
- section#plato{
-     grid-area: plato;
-     height: 300px;
-     justify-content: space-between;
-     overflow: hidden;
- }
-
- section#cup{
-     grid-area: cup;
-    background-color: rgba(207, 205, 205, 0.562);
- }
-
- section#bowl{
-     grid-area: bowl;
-     background-color: rgba(207, 205, 205, 0.562);
-     justify-content: right;
-     height: 300px;
-    }
-
-    .photo_size{
-            width: 300px;
-            
-        }
-   
-        
-    .photo_size1{
-            width: 500px ;
-        } 
-       
     .section_sobre_nosotros{
-        margin-top: 180px;
-        padding: 20px;
+        width: 800px;
+        padding-top: 100px;
+        margin-left: 50px;
+        
     }
     .sn_titulo{
-        font-size: 40px;
-        margin-bottom: 30px;
-    }
+        font-size: 50px;
+    } 
     .sn_parrafo{
-        font-size: 14px;
-        margin-top: 10px;
+        font-size: 12px;
     }
-    .video{
-        width: 300px;
-       
+    .descripcion_sn{
+        width: 350px;
+        margin-top: 100px;
+        margin-bottom: 150px;
         
-
     }
+    .container{
+        padding: 30px;
+    }
+
+    
     /* cups*/   
 .main_section_cups{
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: auto auto auto;
-    margin-left: 180px;
+    margin-left: 80px;
     grid-row-gap: 20px;
 
 }
@@ -522,14 +538,16 @@ main{
     margin-left: 20px;
 }
 .serie_photo_size{
-    width: 400px;
+    width: 380px;
+    margin: 5px;
     transition: transform .2s;
 }
 .serie_photo_size:hover{
     transform: scale(1.1);
 }
 .serie_photo_size1{
-    width: 400px;
+    width: 380px;
+    margin: 5px;
     transition: transform .2s;
 }
 .serie_photo_size1:hover{
@@ -546,7 +564,7 @@ main{
 .section_piezas{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr ;
+    grid-template-rows: auto auto ;
     grid-gap: 20px;
     
    
@@ -560,6 +578,7 @@ main{
 }
 .piezas_t{
     font-size: 20px;
+    
 }
 .piezas_p{
     font-size: 12px;
@@ -573,12 +592,9 @@ main{
     padding-bottom: 40px;
     width: 280px;
 }
-.piezas_descr{
-    position: relative;
-    padding-top: 30px;
-    background-color: rgba(207, 205, 205, 0.562);
-    width: 280px;
-}
+
+ 
+
 }
 
 
